--- a/README.adoc
+++ b/README.adoc
@@ -156,6 +156,11 @@ On Opensuse & derivatives you can easily install them like this:
 sudo zypper install libQt5Core-devel libQt5Widgets-devel libQt5Network-devel libzstd-devel libzstd1 cmake make ninja rust ibus-devel ibus clang gcc patterns-devel-base-devel_basis
 ```
 
+On Solus you can easily install them like this:
+```bash
+sudo eopkg install -c system.devel rust qt5-base-devel ibus-devel zstd-devel git cargo
+```
+
 After you have installed required libraries and binaries, clone this repository and change to the cloned folder:
 ```bash
 git clone --recursive https://github.com/OpenBangla/OpenBangla-Keyboard.git
