--- a/README.adoc
+++ b/README.adoc
@@ -136,31 +136,37 @@ OpenBangla Keyboard currently has the following build dependencies:
 * iBus development library
 * Zstandard compression library (zstd)
 
+=== Ubuntu & Debian derivatives
 On a Ubuntu/Debian system you can easily install them like this:
 ```bash
 sudo apt-get install build-essential rustc cargo cmake libibus-1.0-dev qt5-default libzstd-dev
 ```
 
+=== Fedora
 On a Fedora system you can easily install them like this:
 ```bash
 sudo dnf install @buildsys-build rust cargo cmake qt5-qtdeclarative-devel ibus-devel libzstd-devel
 ```
 
+=== Arch Linux & it's derivatives
 On a Arch Linux / Arch Based system you can easily install them like this:
 ```bash
 sudo pacman -S base-devel rust cmake qt5-base libibus zstd
 ```
 
-On Opensuse & derivatives you can easily install them like this:
+=== openSUSE
+On openSUSE & derivatives you can easily install them like this:
 ```bash
 sudo zypper install libQt5Core-devel libQt5Widgets-devel libQt5Network-devel libzstd-devel libzstd1 cmake make ninja rust ibus-devel ibus clang gcc patterns-devel-base-devel_basis
 ```
 
+=== Solus
 On Solus you can easily install them like this:
 ```bash
 sudo eopkg install -c system.devel rust qt5-base-devel ibus-devel zstd-devel git cargo
 ```
 
+=== Finally
 After you have installed required libraries and binaries, clone this repository and change to the cloned folder:
 ```bash
 git clone --recursive https://github.com/OpenBangla/OpenBangla-Keyboard.git
