Use wget on debian based systems instead of using curl

--- a/README.adoc
+++ b/README.adoc
@@ -79,8 +79,8 @@ First set up our repositories for your distro, then you can install normally wit
 Run these commands to set up our repository:
 ```bash
 source /etc/os-release
-sudo sh -c "curl https://dl.bintray.com/openbangla/i/pub.key | apt-key add -"
-sudo sh -c "curl https://dl.bintray.com/openbangla/i/ubuntu.conf | sed s/@NAME@/$UBUNTU_CODENAME/ > /etc/apt/sources.list.d/openbangla.list"
+sudo sh -c "wget https://dl.bintray.com/openbangla/i/pub.key -q -O - | apt-key add -"
+sudo sh -c "wget https://dl.bintray.com/openbangla/i/ubuntu.conf -q -O - | sed s/@NAME@/$UBUNTU_CODENAME/ > /etc/apt/sources.list.d/openbangla.list"
 sudo apt update
 sudo apt install openbangla-keyboard
 ```
@@ -89,8 +89,8 @@ sudo apt install openbangla-keyboard
 Run these commands to set up our repository:
 ```bash
 source /etc/os-release
-sudo sh -c "curl https://dl.bintray.com/openbangla/i/pub.key | apt-key add -"
-sudo sh -c "curl https://dl.bintray.com/openbangla/i/debian.conf | sed s/@NAME@/$VERSION_CODENAME/ > /etc/apt/sources.list.d/openbangla.list"
+sudo sh -c "wget https://dl.bintray.com/openbangla/i/pub.key -q -O - | apt-key add -"
+sudo sh -c "wget https://dl.bintray.com/openbangla/i/debian.conf  -q -O - | sed s/@NAME@/$VERSION_CODENAME/ > /etc/apt/sources.list.d/openbangla.list"
 sudo apt update
 sudo apt install openbangla-keyboard
 ```
