--- a/README.bn.adoc
+++ b/README.bn.adoc
@@ -44,6 +44,7 @@ image:https://img.shields.io/discord/436879388362014740.svg[Discord, link=https:
 
 CAUTION: প্রজেক্টটি ভাল লাগলে অনুগ্রহ করে গিটহাব 🌟 দিয়ে উৎসাহিত করুন!
 
+🚧 🚧 *চলমান উন্নয়ন কর্মকাণ্ড https://github.com/OpenBangla/OpenBangla-Keyboard/tree/develop[`develop`] ব্রাঞ্চে হয়ে থাকে।* 🚧 🚧
 
 toc::[]
 
