--- a/README.adoc
+++ b/README.adoc
@@ -37,11 +37,6 @@ So Avro Keyboard users will feel right at home in Linux with OpenBangla Keyboard
 
 image:https://github.com/OpenBangla/OpenBangla-Keyboard/workflows/CI/badge.svg[CI, link=https://github.com/OpenBangla/OpenBangla-Keyboard/actions?query=workflow%3ACI+branch%3Amaster] {nbsp}
 image:https://img.shields.io/github/downloads/OpenBangla/OpenBangla-Keyboard/total.svg?label=GitHub%20Downloads[Github Downloads, link=https://img.shields.io/github/downloads/OpenBangla/OpenBangla-Keyboard/total.svg?label=GitHub%20Downloads] {nbsp}
-image:https://img.shields.io/bintray/dt/openbangla/ubuntu/openbangla-keyboard?label=Bintray%20Ubuntu[Bintray Ubuntu repo downloads, link=https://img.shields.io/bintray/dt/openbangla/ubuntu/openbangla-keyboard?label=Bintray%20Ubuntu] {nbsp}
-image:https://img.shields.io/bintray/dt/openbangla/debian/openbangla-keyboard?label=Bintray%20Debian[Bintray Debian downloads, link=https://img.shields.io/bintray/dt/openbangla/debian/openbangla-keyboard?label=Bintray%20Debian] {nbsp}
-image:https://img.shields.io/bintray/dt/openbangla/fedora/openbangla-keyboard?label=Bintray%20Fedora[Bintray Fedora downloads, link=https://img.shields.io/bintray/dt/openbangla/fedora/openbangla-keyboard?label=Bintray%20Fedora] {nbsp}
-image:https://img.shields.io/bintray/dt/openbangla/archlinux/openbangla-keyboard?label=Bintray%20Arch%20Linux[Bintray Arch Linux downloads, link=https://img.shields.io/bintray/dt/openbangla/archlinux/openbangla-keyboard?label=Bintray%20Arch%20Linux] {nbsp}
-image:https://img.shields.io/discord/436879388362014740.svg[Discord, link=https://discord.gg/HXK7QnJ]
 
 CAUTION: This project is powered by github 🌟s. Go ahead and *star* it please!
 
@@ -74,44 +69,36 @@ toc::[]
 
 IMPORTANT: If you had installed OpenBangla Keyboard 1.5.1 or earlier version, https://github.com/OpenBangla/OpenBangla-Keyboard/wiki/Uninstalling-OpenBangla-Keyboard[please uninstall it first.]
 
-First set up our repositories for your distro, then you can install normally with your package manager.
-
-=== Ubuntu & derivatives
-Run these commands to set up our repository:
+Open your terminal and run this command on your bash shell. NB : It has to be **BASH**, otherwise it won't work.
 ```bash
-source /etc/os-release
-sudo sh -c "wget https://dl.bintray.com/openbangla/i/pub.key -q -O - | apt-key add -"
-sudo sh -c "wget https://dl.bintray.com/openbangla/i/ubuntu.conf -q -O - | sed s/@NAME@/$UBUNTU_CODENAME/ > /etc/apt/sources.list.d/openbangla.list"
-sudo apt update
-sudo apt install openbangla-keyboard
+bash -c "$(wget -q https://raw.githubusercontent.com/OpenBangla/OpenBangla-Keyboard/master/tools/install.sh -O -)"
 ```
 
-=== Debian & derivatives
-Run these commands to set up our repository:
-```bash
-source /etc/os-release
-sudo sh -c "wget https://dl.bintray.com/openbangla/i/pub.key -q -O - | apt-key add -"
-sudo sh -c "wget https://dl.bintray.com/openbangla/i/debian.conf  -q -O - | sed s/@NAME@/$VERSION_CODENAME/ > /etc/apt/sources.list.d/openbangla.list"
-sudo apt update
-sudo apt install openbangla-keyboard
-```
+If this does not workout for you please create an https://github.com/OpenBangla/OpenBangla-Keyboard/issues[Issue]. While we look into the problem you can check the https://github.com/OpenBangla/OpenBangla-Keyboard/wiki/Installing-OpenBangla-Keyboard[Wiki] for Distrowise/Distro-specific Install Instructions.
 
-=== Fedora
-Run these commands to set up our repository:
-```bash
-sudo rpm --import https://dl.bintray.com/openbangla/i/pub.key
-sudo sh -c "curl https://dl.bintray.com/openbangla/i/fedora.conf > /etc/yum.repos.d/openbangla.repo"
-sudo dnf install openbangla-keyboard
-```
+=== Archlinux and it's derivatives
+There are two packages for OpenBangla Keyboard in the Arch User Repository(AUR). Use `openbangla-keyboard` if you want to make and install the package from source. Otherwise, use `openbangla-keyboard-bin` to use the binary package released for Arch and its derivatives by the maintainer. You can install it in one command with your favorite aur helper. Example commands for some popular tools:
 
-=== Archlinux
-Run these commands to set up our repository:
+==== `openbangla-keyboard`
+* `$ pacaur -S openbangla-keyboard`
+* `$ yay -S openbangla-keyboard`
+* `$ yaourt -S openbangla-keyboard`
+
+==== `openbangla-keyboard-bin`
+* `$ pacaur -S openbangla-keyboard-bin`
+* `$ yay -S openbangla-keyboard-bin`
+* `$ yaourt -S openbangla-keyboard-bin`
+
+Or install manually:
 ```bash
-sudo sh -c "curl https://dl.bintray.com/openbangla/i/pub.key | pacman-key -a -"
-sudo pacman-key --lsign-key "openbanglateam@gmail.com"
-sudo sh -c "curl https://dl.bintray.com/openbangla/i/archlinux.conf >> /etc/pacman.conf"
-sudo pacman -Syy
-sudo pacman -S openbangla-keyboard
+sudo pacman -S base-devel git
+git clone https://aur.archlinux.org/openbangla-keyboard.git
+cd openbangla-keyboard
+makepkg -risc
+```
+We also provide a `.pkg.tar.zst` package for Arch Linux which you can download the installation package from https://github.com/OpenBangla/OpenBangla-Keyboard/releases[releases page] and install OpenBangla Keyboard on your system by running the following command:
+```bash
+$ sudo pacman -U package.pkg.tar.zst
 ```
 
 === Others
