--- a/README.adoc
+++ b/README.adoc
@@ -77,7 +77,8 @@ bash -c "$(wget -q https://raw.githubusercontent.com/OpenBangla/OpenBangla-Keybo
 If this does not workout for you please create an https://github.com/OpenBangla/OpenBangla-Keyboard/issues[Issue]. While we look into the problem you can check the https://github.com/OpenBangla/OpenBangla-Keyboard/wiki/Installing-OpenBangla-Keyboard[Wiki] for Distrowise/Distro-specific Install Instructions.
 
 === Archlinux and it's derivatives
-We have a video tutorial that covers all the procedures for Arch Linux. You may check that out from [here](https://youtu.be/C8vnR1AY6sA). However, there are two packages for OpenBangla Keyboard in the Arch User Repository(AUR). Use `openbangla-keyboard` if you want to make and install the package from source. Otherwise, use `openbangla-keyboard-bin` to use the binary package released for Arch and its derivatives by the maintainer. You can install it in one command with your favorite aur helper. Example commands for some popular tools:
+TIP: There is a video tutorial about installing OpenBangla Keyboard in Arch Linux. You may check that out from [here](https://youtu.be/C8vnR1AY6sA).
+There are two packages for OpenBangla Keyboard in the Arch User Repository(AUR). Use `openbangla-keyboard` if you want to make and install the package from source. Otherwise, use `openbangla-keyboard-bin` to use the binary package released for Arch and its derivatives by the maintainer. You can install it in one command with your favorite aur helper. Example commands for some popular tools:
 
 ==== `openbangla-keyboard`
 * `$ pacaur -S openbangla-keyboard`
