--- a/README.bn.adoc
+++ b/README.bn.adoc
@@ -118,7 +118,7 @@ https://github.com/OpenBangla/OpenBangla-Keyboard/discussions[গিটহাব
 
 ওপেনবাংলা কিবোর্ড কম্পাইল তথা সোর্সকোড থেকে বিল্ড করার জন্য বর্তমানে নিম্নোলিখিত ডিপেন্ডেসিগুলো প্রয়োজন:
 
-* GNU GCC, G++ compiler or Clang
+* GNU GCC 8 (or later) or Clang 7 (or later) compiler
 * Rust 1.34.0 or later
 * GNU Make or Ninja
 * CMake
